[package]
name = "catalystsample"
version = "0.1.0"
authors = ["Shaheen Gandhi <visigoth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

